parslers-benchmark/src/tests/invalid/syntaxErr/basic/badEscape.wacc
# program has unacceptable escape character

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  char a = '\H'
end
